(Rutas de menu estudiante agregada / falta css para los iconos)

--- a/templates/Estudiante/perfil.html
+++ b/templates/Estudiante/perfil.html
@@ -1,6 +1,10 @@
 {% extends 'layoutE.html' %}
 
+
+<!-- Estilos del menu estudiante.... -->
 {% block contenido %}
-
-
+<link rel="stylesheet" href="{{ url_for('static', filename='css/estudiante.css' ) }}"> 
+<div class=prueba2>
+    <ul>Si funciono</ul> 
+</div>
 {% endblock %}
