--- a/static/css/estudiante.css
+++ b/static/css/estudiante.css
@@ -1,8 +1,8 @@
-.prueba{
-
-    width:78%;
-    height:90%;
-    
-
-
+.prueba2{
+	width: 80%;
+	height:10%;
+		position: fixed;
+		top: 10%; right: 0;
+        background-color: rgb(230, 0, 0);
+		
 }
