--- a/templates/layoutE.html
+++ b/templates/layoutE.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
     <!--Css-->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/CssLayout.css' ) }}"> 
     
@@ -37,7 +38,7 @@
 
 <div class="contenedor-menu">
    
-	<div class="cont-menu">
+	<div class="conte-menu" >
         <div class="logo"> <!--Este div es necesario para poder acomodar el menu :v-->
             <h1>Estudiante</h1>
         </div>
@@ -50,7 +51,7 @@
             <a href="/Estudiante/perfil">Perfil</a>
             <a href="/Estudiante/asignaturas">Asignaturas</a>
             <a href="/Estudiante/novedades">Novedades</a>
-            <br><br><br>
+            <br><br>
             <div class=out>
               <img src="/static/img/out.svg" >
             <a href=/Login>Cerrar Sesion</a> 
