Layout Actualizado // Rutas acurlizadas // Falta CSS boton Asignaturas

--- a/static/css/CssLayout.css
+++ b/static/css/CssLayout.css
@@ -15,21 +15,21 @@
 		height: 10%;
 		position: fixed;
 		top: 0;right: 0;
-        background-color: rgb(255, 255, 255);
+        background-color: rgb(194, 194, 194);
 	}
 
     /* Le estoy diciendo aqui que ocupe el 90% del header :v*/
+	/*
 	.contenedor{
 		width: 90%;
 		
 	}
-
-	
-	
-	.contenedor .menu{
+*/
+	/* .contenedor .menu{
 		float: right;
 		line-height: 80px;
-	}
+	} */
+	/*
 	.contenedor .menu a{
 		display: inline-block;
 		padding: 15px;
@@ -39,18 +39,19 @@
 		transition: all 0.3s ease;
 		border-bottom: 2px solid transparent;
 		font-size: 15px;
-		/* margin-right: 5px; */
+		 margin-right: 5px; 
 	}
-	.contenedor .menu a:hover{
+	*/
+/* 	.contenedor .menu a:hover{
 		border-bottom: 2px solid #c7c7c7;
 		padding-bottom: 5px;
 	}
-  
+   */
 	/*Fin de Estilos para el encabezado*/
 
 	/*Menù lateral*/
 	
-	.contenedor-menu{
+/* .contenedor-menu{
 		position: absolute;
 		background: rgba(0,0,0,0.5);
 		width: 20%;
@@ -59,28 +60,14 @@
 		transition: all 500ms ease;
 		
     }
-	
+	 */
 
 /* Definir posicicon del perfil que ingresa (estudiante, administrado o docente*/	
-.logo{
-    position: absolute;
-    width: 153px;
-    height: 35px;
-    left: 12%;
-    top: 5%;
-    
-}
-/* Aca se contrala el tamaño del titulo de perfil. */
-.logo h1{
-    color: rgb(255, 255, 255);
-    font-weight: 400;
-    font-size: 22px;
-    margin-left: 10px;
-}
+
+
+
 /*para organizar las opciones del menu*/
-.Margen {
-    margin-top: 30%;
-}
+
 /* Cuadro del menu de opciones vertical */
 .conte-menu{
 		
@@ -88,9 +75,7 @@
     width: 100%;
     background: #3164F4;
     height: 100vh;
-    transition: all 500ms ease;
-	
-    
+    transition: all 500ms ease;   
 }
 /*estilo de los links */
 .conte-menu nav a{
@@ -104,23 +89,51 @@
 .conte-menu nav a:hover{
     border-left: 5px solid #5c84f3;
     background: #4f9fd4;
-    color: #ffffff;
+    color: #000000;
     cursor: pointer;
 
 }
 
-
-/* Estilo de Icon cerrar Sesion*/
-.conte-menu .out{
-	width: 100%;
-}
-.conte-menu .out img{
-	float:left;	
-	width:24px;
-	height: 24px;
-	margin-left: 10%;
-	
-	
+nav li{
+	display: inline-block;
+	width:100%;
+	position: relative;
 }
 
- 
+nav li:hover{
+background-color: #fff;
+color:#000;
+}
+
+nav li>ul{
+	display: none;
+}
+
+nav li:hover>ul{
+	display: block;
+	position: absolute;
+	top:30%;
+	right: 0px;
+
+}
+
+.contenedor-header .campana{
+	top:0; right: 0;
+}
+
+nav ul .out{
+	top:95%;
+}
+
+
+ul li ul {
+	left:90%
+  }
+
+  div.conte-menu.text-white {
+	position: fixed;
+	width: 20%;
+	overflow:auto;
+	word-wrap: break-word;
+  
+  }
