--- a/templates/Estudiante/perfil.html
+++ b/templates/Estudiante/perfil.html
@@ -3,8 +3,15 @@
 
 <!-- Estilos del menu estudiante.... -->
 {% block contenido %}
+
 <link rel="stylesheet" href="{{ url_for('static', filename='css/estudiante.css' ) }}"> 
+<section>
 <div class=prueba2>
-    <ul>Si funciono</ul> 
+    <ul>
+        <li>Si funciono</li>
+        <li>Si o si</li>
+
+    </ul> 
 </div>
+</section>
 {% endblock %}
