--- a/templates/Login.html
+++ b/templates/Login.html
@@ -13,12 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>PROYECTO 8 | IMPERIUM</title>
     <body>
-    <script src="{{url_for('static', filename='js/script.js')}}"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    
-    
-    
-    <div class="login-box">
+   <div class="login-box">
        <img src="./static/img/UN2.gif" class="avatar" alt="Avatar Image">
       <!-- <img src="img/UN2.gif" class="avatar" alt="Avatar Image"> -->
       <br><h1>Iniciar Sesión</h1>
@@ -46,5 +41,7 @@
         
       </form>
     </div>
+    <script src="{{url_for('static', filename='js/LoginScript.js')}}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </body>
 </html>
