--- a/templates/LayoutD.html
+++ b/templates/LayoutD.html
@@ -16,7 +16,7 @@
 
     
     
-    <title>Layout Student</title>
+    <title>Layout Docente</title>
   </head>
   <body>
   <main>
@@ -25,12 +25,12 @@
 		<div class="container">
         <ul class="nav nav-pills">
           <li class="nav-item">
-            <a href="/Estudiante/novedades" class=icon-campana>
+            <a href="/Docente/Calendario" class=icon-campana>
               <i class="bi bi-bell-fill"></i>
             </a>
           </li>
           <li class=nav-item> 
-            <a>Pepito Perez</a> 
+            <a>Carrascal Frutiño</a> 
           </li>
           <li class=nav-item>
             <a>
@@ -50,49 +50,37 @@
     <nav >
       <a>
       <i class="bi bi-bullseye"></i>
-      <span>Estudiante</span>
+      <span>Docente</span>
      </a>
   <hr>
      <ul class="nav nav-pills">  
       <li>
-        <a title="Perfil" href="/Estudiante/perfil" >
+        <a title="Perfil" href="/Docente/perfilD" >
           <i class="bi bi-people-fill"></i>
           <span>Area Personal</span>
         </a>
       </li>
       <li>
-        <a href="/Estudiante/cursos">
+        <a title="Cursos que dicto"href="/Docente/cursod">
           <i class="bi bi-journal-text"></i>
-          <span>Matricular Asignaturas</span>
+          <span>Cursos</span>
         </a>
       </li>
       <li>
-        <a href="/Estudiante/actividades">
-          <i class="bi bi-journal-arrow-down"></i>
-          <span>Actividades</span>
-        </a>
-      </li>
-      <li>
-        <a href="/Estudiante/entregas">
-          <i class="bi bi-journal-arrow-up"></i>
-          <span>Entregas</span>
-        </a>
-      </li>
-      <li>
-        <a href="/Estudiante/novedades">
-          <i class="bi bi-journals"></i>
-          <span>Novedades</span>
+        <a href="/Docente/Calendario">
+          <i class="bi bi-calendar3"></i>
+          <span>Calendario</span>
         </a>
       </li>
       <li class="mb_1">
             <a  title="Desplegable" class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#tarea-collapse" aria-expanded="false">
               <i class="bi bi-journal-text"></i>
-              <span>Asignaturas</span>
+              <span>Actividades</span>
             </a>
             <div class="collapse" id="tarea-collapse">         
             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-            <li><a class="dropdown-item" href="/Estudiante/asigtatura/#" >Action</a></li>
-            <li><a class="dropdown-item" href="/Estudiante/asigtatura/#" > Other Action</a></li>
+            <li><a class="dropdown-item" href="/Docente/Actividades/revisar" >Asignar</a></li>
+            <li><a class="dropdown-item" href="/Docente/Actividades/Calificar" > Calificar</a></li>
           </ul>
         </div>  
       </li>
