--- a/templates/LayoutS.html
+++ b/templates/LayoutS.html
@@ -50,7 +50,7 @@
     <nav >
       <a>
       <i class="bi bi-bullseye"></i>
-      <span>Estudiante</span>
+      <span>Admnistrador</span>
      </a>
   <hr>
      <ul class="nav nav-pills">  
