Rutas Actualizadas / Menus Actualizados

--- a/templates/LayoutD.html
+++ b/templates/LayoutD.html
@@ -16,7 +16,7 @@
 
     
     
-    <title>Layout Docente</title>
+    <title>Docente | IMPERIUM</title>
   </head>
   <body>
   <main>
@@ -79,7 +79,7 @@
             </a>
             <div class="collapse" id="tarea-collapse">         
             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-            <li><a class="dropdown-item" href="/Docente/Actividades/revisar" >Asignar</a></li>
+            <li><a class="dropdown-item" href="/Docente/Actividades/asignar" >Asignar</a></li>
             <li><a class="dropdown-item" href="/Docente/Actividades/Calificar" > Calificar</a></li>
           </ul>
         </div>  
