--- a/templates/LayoutS.html
+++ b/templates/LayoutS.html
@@ -16,7 +16,7 @@
 
     
     
-    <title>Layout Student</title>
+    <title>Administrador</title>
   </head>
   <body>
   <main>
@@ -30,7 +30,7 @@
             </a>
           </li>
           <li class=nav-item> 
-            <a>Pepito Perez</a> 
+            <a>Johan David Acosta</a> 
           </li>
           <li class=nav-item>
             <a>
@@ -55,46 +55,46 @@
   <hr>
      <ul class="nav nav-pills">  
       <li>
-        <a title="Perfil" href="/Estudiante/perfil" >
+        <a title="Perfil" href="/Administrador/PerfilS" >
           <i class="bi bi-people-fill"></i>
           <span>Area Personal</span>
         </a>
       </li>
       <li>
-        <a href="/Estudiante/cursos">
+        <a href="/Administrador/GestiondeCursos">
           <i class="bi bi-journal-text"></i>
-          <span>Matricular Asignaturas</span>
+          <span>Gestion De Cursos</span>
         </a>
       </li>
       <li>
-        <a href="/Estudiante/actividades">
+        <a href="/Administrador/CrearUsuarioRoles">
           <i class="bi bi-journal-arrow-down"></i>
-          <span>Actividades</span>
+          <span>Crear Usuario/Asignacion de Roles</span>
         </a>
       </li>
       <li>
-        <a href="/Estudiante/entregas">
+        <a href="/Administrador/GestiondeUsuarios">
           <i class="bi bi-journal-arrow-up"></i>
-          <span>Entregas</span>
+          <span>Gestion de Usuarios</span>
         </a>
       </li>
       <li>
-        <a href="/Estudiante/novedades">
+        <a href="/Administrador/VisualizarUsuarios">
           <i class="bi bi-journals"></i>
-          <span>Novedades</span>
+          <span>Visualizar Usuarios</span>
         </a>
       </li>
-      <li class="mb_1">
-            <a  title="Desplegable" class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#tarea-collapse" aria-expanded="false">
-              <i class="bi bi-journal-text"></i>
-              <span>Asignaturas</span>
-            </a>
-            <div class="collapse" id="tarea-collapse">         
-            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-            <li><a class="dropdown-item" href="/Estudiante/asigtatura/#" >Action</a></li>
-            <li><a class="dropdown-item" href="/Estudiante/asigtatura/#" > Other Action</a></li>
-          </ul>
-        </div>  
+      <li>
+        <a href="/Administrador/CrearAsignatura">
+          <i class="bi bi-journals"></i>
+          <span>Crear Asignatura</span>
+        </a>
+      </li>
+      <li>
+        <a href="/Administrador/Calendario">
+          <i class="bi bi-journals"></i>
+          <span>Calendario</span>
+        </a>
       </li>
     </ul>
       <hr>
