--- a/templates/layoutE.html
+++ b/templates/layoutE.html
@@ -16,7 +16,7 @@
 
     
     
-    <title>Layout Student</title>
+    <title>Estudiante | IMPERIUM</title>
   </head>
   <body>
   <main>
@@ -60,12 +60,18 @@
           <span>Area Personal</span>
         </a>
       </li>
-      <li>
-        <a href="/Estudiante/cursos">
+      <li class="mb_1">
+        <a  title="Desplegable" class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#tarea-collapse" aria-expanded="false">
           <i class="bi bi-journal-text"></i>
-          <span>Matricular Asignaturas</span>
+          <span>Asignaturas</span>
         </a>
-      </li>
+        <div class="collapse" id="tarea-collapse">         
+        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+        <li><a class="dropdown-item" href="/Estudiante/asignaturas/matricular">Matricular Asignaturas</a></li>
+        <li><a class="dropdown-item" href="/Estudiante/asignaturas/materias" >Mis Asignaturas</a></li>
+      </ul>
+    </div>  
+  </li>
       <li>
         <a href="/Estudiante/actividades">
           <i class="bi bi-journal-arrow-down"></i>
@@ -84,17 +90,11 @@
           <span>Novedades</span>
         </a>
       </li>
-      <li class="mb_1">
-            <a  title="Desplegable" class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#tarea-collapse" aria-expanded="false">
-              <i class="bi bi-journal-text"></i>
-              <span>Asignaturas</span>
-            </a>
-            <div class="collapse" id="tarea-collapse">         
-            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-            <li><a class="dropdown-item" href="/Estudiante/asigtatura/#" >Action</a></li>
-            <li><a class="dropdown-item" href="/Estudiante/asigtatura/#" > Other Action</a></li>
-          </ul>
-        </div>  
+      <li>
+        <a href="/Estudiante/Calificaciones">
+          <i class="bi bi-journal-check"></i>
+          <span>Calificaciones</span>
+        </a>
       </li>
     </ul>
       <hr>
