Rutas Actualizadas / Menus Actualizados

--- a/templates/Estudiante/Asignaturas/MisMaterias.html
+++ b/templates/Estudiante/Asignaturas/MisMaterias.html
@@ -1,6 +1,30 @@
 {% extends 'layoutE.html' %}
 
 {% block contenido %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/estudiante.css' ) }}">
+<div class="vista">
+    <div class="marco2">
+        <section class="seccion2">
+            <h2>Asignaturas:</h2>
+            <div class="asignaturas">
+
+                <div id="asignatura">
+                    <h3><a href="#">Biología</a> </h3>
+                </div>
+                <div id="asignatura">
+                    <h3><a href="#">Matemáticas</a></h3>
+                </div>
+                <div id="asignatura" >
+                    <h3><a href="#">Ciencias sociales</a></h3>
+                </div>
+                <div id="asignatura">
+                    <h3><a href="#">Educación y aprendizaje</a></h3>
+                    </div>
+            </div>
+        </section>
+    </div>
+</div>
 
 
 {% endblock %}
+
