--- a/templates/LayoutD.html
+++ b/templates/LayoutD.html
@@ -67,9 +67,9 @@
         </a>
       </li>
       <li>
-        <a href="/Docente/Calendario">
+        <a href="/Docente/novedades">
           <i class="bi bi-calendar3"></i>
-          <span>Calendario</span>
+          <span>Novedades</span>
         </a>
       </li>
       <li class="mb_1">
