--- a/static/css/estudiante.css
+++ b/static/css/estudiante.css
@@ -4,5 +4,284 @@
 		position: fixed;
 		top: 10%; right: 0;
         background-color: rgb(230, 0, 0);
-		
+}
+
+.marco{
+	/* Rectangle 20 */
+
+	position: absolute;
+	width: 900px;
+	height: 480px;
+	left: 384px;
+	top: 114px;
+
+	background: #FBFCFF;
+	border: 1px solid rgba(0, 0, 0, 0.38);
+	box-sizing: border-box;
+
+}
+
+
+.seccion h2 {
+	text-align: center;
+}
+
+
+.seccion{
+	background: rgb(255, 255, 255);
+}
+
+.circulo{
+
+	/* justify-content: center;
+	align-items: center;*/
+	width: 150px;
+	height: 150px;
+	background: blue;
+	border-radius: 100% ;
+
+	margin-top: 20px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+  
+}
+
+.avatar-est {
+	width:  100%;
+	height: 100%;
+	border-radius: 100% ;
+	border: 1px solid black;
+}
+
+.marco.seccion.vista{
+	/* Nombre completo: Fern Gonzales */
+
+	width: 638px;
+	height: 66px;
+	left: 349px;
+	top: 492px;
+	
+	font-family: Chenla;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 30px;
+	line-height: 55px;
+	text-align: center;
+
+	color: #000000;
+}
+
+.marco2{
+	/* Rectangle 20 */
+
+	position: absolute;
+	width: 900px;
+	height: 450px;
+	left: 384px;
+	top: 114px;
+	;
+	background: #FBFCFF;
+	border: 1px solid rgba(0, 0, 0, 0.38);
+	box-sizing: border-box;
+
+}
+.seccion2 h2 {
+	text-align: left;
+	margin-left: 50px;
+	margin-top: 20px;
+}
+
+
+.editar{
+	width: 40px;
+	height: 20px;
+	margin-right: 10px;
+	float: right;
+	
+}
+
+.asignaturas{
+	/* Rectangle 19 */
+
+	position: absolute;
+	width: 720px;
+	height: 200px;
+	left: 80px;
+	top: 100px;
+	padding: 5px;
+	background: #FBFCFF;
+	box-sizing: border-box;
+}
+
+#asignatura{
+	border: 1px solid rgba(0, 0, 0, 0.38);
+	box-sizing: border-box;
+	margin-bottom: 30px;
+}
+
+a {
+	color: black;
+
+}
+
+.vistas{
+	width: 80%;
+	height: 40%;
+	margin-top: 10px;
+	top: 100%;
+	font-size: x-large;
+	margin-left: 50px;
+
+}
+
+#ed{
+	box-sizing: border-box;
+	margin-bottom: 10px;
+}
+
+.edi{
+	clear: left;
+}
+
+/*
+
+.asignatura2{
+	border: 1px solid rgba(0, 0, 0, 0.38);
+	box-sizing: border-box;
+}
+
+.asignatura3{
+	border: 1px solid rgba(0, 0, 0, 0.38);
+	box-sizing: border-box;
+}
+
+.asignatura4{
+	border: 1px solid rgba(0, 0, 0, 0.38);
+	box-sizing: border-box;
+}
+
+.asignatura5{
+	border: 1px solid rgba(0, 0, 0, 0.38);
+	box-sizing: border-box;
+}
+*/
+
+.marco3{
+	/* Rectangle 20 */
+
+	position: absolute;
+	width: 900px;
+	height: 450px;
+	left: 384px;
+	top: 114px;
+
+	background: #FBFCFF;
+	border: 1px solid rgba(0, 0, 0, 0.38);
+	box-sizing: border-box;
+}
+
+.seccion3 h2 {
+	text-align: left;
+	margin-left: 50px;
+	margin-top: 20px;
+}
+
+.marco4{
+	/* Rectangle 20 */
+	position: absolute;
+	width: 900px;
+	height: 550px;
+	left: 384px;
+	top: 114px;
+	background: #FBFCFF;
+	border: 1px solid rgba(0, 0, 0, 0.38);
+	box-sizing: border-box;
+}
+
+
+
+#boton {
+	width: 200px;
+	height: 60px;
+	float: right;
+	text-align: center;
+
+	margin-right: 150px;
+	background: #FBFCFF;
+	border-radius: 30px;
+}
+#boton h3{
+	font-size: 20px;
+	text-shadow: rgb(230, 0, 0);
+	margin-top: 10px;
+}
+
+.seccion4 h2 {
+	text-align: left;
+	margin-left: 50px;
+	margin-top: 20px;
+}
+
+.matricula {
+	width: 780px;
+	height: 250px;
+	background: blue;
+	border-color: 2x black;
+	margin-left: 50px;
+	margin-top: 20px;
+}
+
+.matricula > .inscripcion {
+	width: 100%;
+	height: 100%;
+}
+
+.noti{
+	margin-left: 50px;
+	margin-top: 5px;
+}
+
+.marco5{
+	/* Rectangle 20 */
+	position: absolute;
+	width: 900px;
+	height: 550px;
+	left: 384px;
+	top: 114px;
+	
+
+	background: #FBFCFF;
+	border: 1px solid rgba(0, 0, 0, 0.38);
+	box-sizing: border-box;
+}
+
+.seccion5 h2 {
+	text-align: left;
+	margin-left: 50px;
+	margin-top: 20px;
+}
+
+#act{
+	width: 790px;
+	height: 90px;
+	box-sizing: border-box;
+	margin-bottom: 30px;
+	border: 1px solid rgba(0, 0, 0, 0.38);
+	box-sizing: border-box;
+	margin-bottom: 30px;
+}
+
+.descarga{
+	width: 20px;
+	height: 20px;
+}
+.acti{
+	width: 80%;
+	height: 40%;
+	margin-top: 30px;
+	top: 100%;
+	font-size: x-large;
+	margin-left: 50px;
+	
 }
