Actualizando rutas /// y meno crear usuario

--- a/templates/Administrador/GestionUsuarios/CrearUsuario.html
+++ b/templates/Administrador/GestionUsuarios/CrearUsuario.html
@@ -1,6 +1,14 @@
-{% extends 'layoutS.html' %}
+ {% extends 'layoutS.html' %} {% block contenido %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/administrador.css' ) }}">
 
-{% block contenido %}
 
+<section class=section>
+    <div class=prueba>
+
+        <p> gola</p>
+
+    </div>
+
+</section>
 
 {% endblock %}
